image overlap fix

--- a/src/components/ads-sidebar/ads-sidebar.css
+++ b/src/components/ads-sidebar/ads-sidebar.css
@@ -13,5 +13,5 @@
 
 #adds a img {
    width: 100%;
-   height: 200px;
+   height: 25%;
 }
